@@ -1144,15 +1144,15 @@
 //-- RK_IGNITIONBREAK
 2006,1000,0,2000,0,0,0
 //-- RK_DRAGONBREATH ( still need time2 value )[pakpil]
-2008,250:500:750:1000:1250:1500:1750:2000:2250:2500,0,2000,0,100,10000
+2008,3000,0,2000,0,100,10000
 //-- RK_DRAGONHOWLING
-2009,0,0,0,0,10000,15000
+2009,0,0,60000,0,10000,15000
 //-- RK_MILLENNIUMSHIELD
 2011,1000,1000,90000,0,60000,0
 //-- RK_CRUSHSTRIKE
 2012,1000,0,30000,0,0,0
 //-- RK_REFRESH
-2013,1000,1000,300000,0,30000,0
+2013,2000,1000,120000,0,30000,0
 //-- RK_GIANTGROWTH
 2014,1000,1000,0,0,300000,0
 //-- RK_STONEHARDSKIN
@@ -1160,7 +1160,7 @@
 //-- RK_VITALITYACTIVATION
 2016,1000,1000,0,0,60000,0
 //-- RK_STORMBLAST
-2017,2000,0,3000,0,1000,0
+2017,2000,0,0,0,1000,0
 //-- RK_FIGHTINGSPIRIT
 2018,1000,1000,0,0,180000,0
 //-- RK_ABUNDANCE
@@ -1320,7 +1320,6 @@
 //-- NC_AXETORNADO
 2280,0,1000,0,0,0,0
 //==========================================
-
 
 //===== Shadow Chaser ======================
 //-- SC_FATALMENACE
