@@ -806,7 +806,7 @@ int npc_touchnext_areanpc(struct map_session_data* sd, bool leavemap)
 		pc_ishiding(sd) || leavemap )
 	{
 		char name[NAME_LENGTH*2+3];
-		
+
 		nd->touching_id = sd->touching_id = 0;
 		snprintf(name, ARRAYLENGTH(name), "%s::%s", nd->exname, script_config.ontouch_name);
 		map_forcountinarea(npc_touch_areanpc_sub,nd->bl.m,nd->bl.m - xs,nd->bl.y - ys,nd->bl.x + xs,nd->bl.y + ys,1,BL_PC,sd->bl.id,nd->bl.id,name);
